# fastapi-self-hosting-docs

./: README.md  publish.bat  pyproject.toml
fastapi_self_hosting_docs/: __init__.py
test/: test_1.py
