[project]
name = "fastapi-self-hosting-docs"
description = ""
authors = [
    { name = "mikigo", email = "mikigo@foxmail.com" },
]
dependencies = [
    "fastapi",
]
dynamic = [
  "version",
]
requires-python = ">=3.6"
readme = "README.md"
license = { text = "Apache2.0" }

[project.optional-dependencies]

[project.scripts]

[project.entry-points.pytest11]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "fastapi_self_hosting_docs/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/fastapi_self_hosting_docs",
]
[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.venv",
  "/.env",
  "/.idea",
  "/.pytest_cache",
  "/.gitignore",
  "/dist",
  "/docs",
  "/tests",
  "/debug.py",
  "/run.py",
  "/pytest.ini",
  "/metadata",
  "/publish.bat",
  "/reports",
  "/results",
]